add main electron bootstrapper with dotenv configs

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "electron ."
   },
+  "main": "main.js",
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -22,10 +24,12 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "electron": "1.6.11",
     "@angular/cli": "1.2.1",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
