--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^20.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
